# memo-RF

./: .gitignore  CMakeLists.txt  PERSONA_SWITCHING.md  QUICK_START.md  RADIO_TEST_GUIDE.md  README.md  RUNNING.md  TEST_RESULTS.md  build.sh  build_with_persona.sh  dashboard.jsx  run.sh  start_mock_test.sh  test_muni_api.py  test_plugin  test_plugin.cpp
cmake/: aarch64-linux-gnu.cmake
config/: active.json  config.example.json  config.json  config.json.backup  config.json.example  defaults.json  language_voices.json  language_voices.json.example  personas.json  personas.json.example  rtl_ingest.json
config/agents/: translator.json
config/plugins/: muni.json  muni_test.json
config/robots/: bloo.json  devol.json  muni.json  narsil.json  synthrails.json  vitrobot.json
dashboard_dist/: index.html
dashboard_dist/assets/: index-BypcstUI.js  index-D_KcsBej.js
data/: hotel_14day.csv
docs/: AGENTS_SDK.md  ARCHITECTURE.md  AUTO_RESTART.md  BUILD_FIXES.md  BUILD_NOTES.md  FEED_API.md  FEED_API_QUICK.md  INSTALL_MODELS.md  JETSON_SETUP.md  LINKER_FIX.md  NEXT_STEPS.md  PLUGIN_SYSTEM.md  QUICKSTART.md  QUICK_START.md  RADIO_TEST_GUIDE.md  RUNNING.md  RUN_AS_SERVICE.md  TEST_RESULTS.md  VAD_SPEECH_END.md  VOICE_CONFIG.md  WAKE_WORD.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  theme.js
frontend/src/components/channels/: ChannelDetail.jsx
frontend/src/components/coverage/: CoverageGaps.jsx
frontend/src/components/feed/: TransmissionCard.jsx  TransmissionFeed.jsx
frontend/src/components/home/: Home.jsx
frontend/src/components/live/: LiveOverview.jsx
frontend/src/components/signal/: SignalDuration.jsx
frontend/src/components/stress/: StressMap.jsx
frontend/src/components/ui/: Bar2.jsx  Card.jsx  ChannelBadge.jsx  Metric.jsx  Tip.jsx
frontend/src/constants/: channelMeta.js  requestCategories.js  tabs.js
frontend/src/hooks/: useDemoFeed.js  useSimulatedCategories.js  useSimulatedFeed.js  useSimulatedInsights.js
include/: action_dispatcher.h  action_plugin.h  agent.h  agent_pipeline.h  agents_sdk_bridge.h  audio_io.h  common.h  config.h  errors.h  llm_client.h  logger.h  path_utils.h  router.h  session_recorder.h  state_machine.h  stt_engine.h  tool.h  tool_executor.h  tool_registry.h  transcript_gate.h  tts_engine.h  twitter_flow.h  tx_controller.h  utils.h  vad_endpointing.h
include/core/: compat.h  config.h  constants.h  ring_buffer.h  types.h
include/memory/: conversation_memory.h
include/plugins/: json_command_plugin.h
include/tools/: external_research_tool.h  internal_search_tool.h  log_memo_tool.h
include/tts/: piper_tts.h  tts_interface.h
include/vad/: energy_vad.h  vad_interface.h
scripts/: build_jetson.sh  build_llama_jetson_cuda.sh  build_llama_server.sh  build_whisper_jetson_cuda.sh  download_gpt_oss_20b.sh  download_translate_voices.sh  feed_server.py  feed_server.py.backup  install_piper.sh  install_qwen.sh  memo-rf.service  run_rtl_ingest.py  setup_jetson.sh  setup_piper_path.sh  setup_remote_access.sh  simple_feed.py  start_gpt_oss.sh  start_mock_test.sh  start_server.sh
scripts/rtl_ingest/: README.md  __init__.py  asr_parakeet.py  channelizer.py  feed_client.py  main.py  requirements.txt  vad.py
src/: action_dispatcher.cpp  agent.cpp  agent_pipeline.cpp  agents_sdk_bridge.cpp  audio_io.cpp  config.cpp  llm_client.cpp  logger.cpp  main.cpp  path_utils.cpp  router.cpp  session_recorder.cpp  state_machine.cpp  stt_engine.cpp  tool.cpp  tool_executor.cpp  tool_registry.cpp  tts_engine.cpp  twitter_flow.cpp  tx_controller.cpp  vad_endpointing.cpp
src/core/: config.cpp  types.cpp
src/memory/: conversation_memory.cpp
src/plugins/: json_command_plugin.cpp
src/tools/: external_research_tool.cpp  internal_search_tool.cpp  log_memo_tool.cpp
src/tts/: piper_tts.cpp
src/vad/: energy_vad.cpp
tests/: test_pipeline.cpp
